adding notebook from week2

--- a/week1/missing_values.ipynb
+++ b/week1/missing_values.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Course: Introduction To GenAI\n",
+    "\n",
+    "*Notebook: missing_values.ipynb*\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/gassaf2/RecommenderSystems/blob/main/week1/missing_values.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "lfSCCz4JtLAI"
    },
