--- a/week2/Practical_Exercise_Age_Group_Popularity.ipynb
+++ b/week2/Practical_Exercise_Age_Group_Popularity.ipynb
@@ -1,19 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2479261748.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[11], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    *Notebook: Practical_Exercise_Age_Group_Popularity.ipynb*\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "# Course: Recommender Systems\n",
     "\n",
@@ -38,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +63,7 @@
     "np.random.seed(40)\n",
     "\n",
     "# Load the dataset\n",
-    "df = pd.read_csv('data.csv', encoding='unicode_escape')\n",
+    "df = pd.read_csv('sample_data/data.csv', encoding='unicode_escape')\n",
     "\n",
     "# Create a list of age groups\n",
     "age_groups = ['18-30', '31-45', '46-60', '60+']\n",
