--- a/week3/Practical_Execrcise_NeuMF_Recommender_System_GitHub-.ipynb
+++ b/week3/Practical_Execrcise_NeuMF_Recommender_System_GitHub-.ipynb
@@ -19,12 +19,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Course: Recommender System/Final Project\n",
-    "#Notebook Description: Contains the final code for the final project (NeuMF part)\n",
+    "# Course: Recommender Systems/Week 3\n",
+    "#Notebook Description: Practical Exercise (NeuMF part)\n",
     "\n",
-    "*Notebook: NeuMF_GASSAF_Recommender_System_Course_Project_GitHub.ipynb*\n",
+    "*Notebook: Practical_Execrcise_NeuMF_Recommender_System_GitHub-.ipynb*\n",
     "\n",
-    "<a href=\"https://colab.research.google.com/github/gassaf2/RecommenderSystems/blob/main/FinalProject/NeuMF_GASSAF_Recommender_System_Course_Project_GitHub.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/gassaf2/RecommenderSystems/blob/main/week3/Practical_Execrcise_NeuMF_Recommender_System_GitHub-.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,9 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\gassaf\\Documents\\3_Personal_Documents\\LAU\\Course11_Recommender_Systems\\Final_Project\\pyenv_310\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "tf.get_logger().setLevel('ERROR') # only show error messages"
@@ -58,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,18 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\gassaf\\Documents\\3_Personal_Documents\\LAU\\Course11_Recommender_Systems\\Final_Project\\pyenv_310\\lib\\site-packages\\recommenders\\models\\ncf\\ncf_singlenode.py:12: The name tf.disable_eager_execution is deprecated. Please use tf.compat.v1.disable_eager_execution instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import pandas as pd\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "[246706 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -419,9 +419,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gassaf\\Documents\\3_Personal_Documents\\LAU\\Course11_Recommender_Systems\\Final_Project\\pyenv_310\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\base_layer_v1.py:1697: UserWarning: `layer.apply` is deprecated and will be removed in a future version. Please use `layer.__call__` method instead.\n",
+      "  warnings.warn('`layer.apply` is deprecated and '\n"
+     ]
+    }
+   ],
    "source": [
     "model = NCF (\n",
     "    n_users=data.n_users, \n",
@@ -439,32 +448,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gassaf\\Documents\\3_Personal_Documents\\LAU\\Course11_Recommender_Systems\\Final_Project\\pyenv_310\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\base_layer_v1.py:1697: UserWarning: `layer.apply` is deprecated and will be removed in a future version. Please use `layer.__call__` method instead.\n",
-      "  warnings.warn('`layer.apply` is deprecated and '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<recommenders.models.ncf.dataset.Dataset at 0x1c3e14428f0>"
+       "<recommenders.models.ncf.dataset.Dataset at 0x28ebf0c0940>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,14 +475,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Took 192.7616 seconds for training.\n"
+      "Took 191.1677 seconds for training.\n"
      ]
     }
    ],
@@ -495,14 +495,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Took 340.1994 seconds for prediction.\n"
+      "Took 327.8661 seconds for prediction.\n"
      ]
     }
    ],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -1062,17 +1062,26 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# n_factor=16"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gassaf\\Documents\\3_Personal_Documents\\LAU\\Course11_Recommender_Systems\\Final_Project\\pyenv_310\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\base_layer_v1.py:1697: UserWarning: `layer.apply` is deprecated and will be removed in a future version. Please use `layer.__call__` method instead.\n",
+      "  warnings.warn('`layer.apply` is deprecated and '\n"
+     ]
+    }
+   ],
    "source": [
     "model_nfactor16 = NCF (\n",
     "    n_users=data.n_users, \n",
@@ -1087,6 +1096,296 @@
     "    seed=SEED\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 197.6129 seconds for training.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with Timer() as train_time:\n",
+    "    model_nfactor16.fit(data)\n",
+    "\n",
+    "print(\"Took {} seconds for training.\".format(train_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 328.2233 seconds for prediction.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with Timer() as test_time:\n",
+    "    users, items, preds = [], [], []\n",
+    "    item = list(train.itemID.unique())\n",
+    "    for user in train.userID.unique():\n",
+    "        user = [user] * len(item)\n",
+    "        users.extend(user)\n",
+    "        items.extend(item)\n",
+    "        preds.extend(list(model_nfactor16.predict(user, item, is_list=True)))\n",
+    "\n",
+    "    all_predictions = pd.DataFrame(data={\"userID\": users, \"itemID\":items, \"prediction\":preds})\n",
+    "\n",
+    "    merged = pd.merge(train, all_predictions, on=[\"userID\", \"itemID\"], how=\"outer\")\n",
+    "    all_predictions = merged[merged.rating.isnull()].drop('rating', axis=1)\n",
+    "\n",
+    "print(\"Took {} seconds for prediction.\".format(test_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAP:\t0.044282\n",
+      "NDCG:\t0.094738\n",
+      "Precision@K:\t0.060949\n",
+      "Recall@K:\t0.075899\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval_map = map_at_k(test, all_predictions, col_prediction='prediction', k=TOP_K)\n",
+    "eval_ndcg = ndcg_at_k(test, all_predictions, col_prediction='prediction', k=TOP_K)\n",
+    "eval_precision = precision_at_k(test, all_predictions, col_prediction='prediction', k=TOP_K)\n",
+    "eval_recall = recall_at_k(test, all_predictions, col_prediction='prediction', k=TOP_K)\n",
+    "\n",
+    "print(\"MAP:\\t%f\" % eval_map,\n",
+    "      \"NDCG:\\t%f\" % eval_ndcg,\n",
+    "      \"Precision@K:\\t%f\" % eval_precision,\n",
+    "      \"Recall@K:\\t%f\" % eval_recall, sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_order = pd.read_excel('Rec_sys_data.xlsx', 'order')\n",
+    "df_customer = pd.read_excel('Rec_sys_data.xlsx', 'customer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_product = pd.read_excel('Rec_sys_data.xlsx', 'product')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_predictions = all_predictions[['userID','itemID','prediction']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_predictions = all_predictions.rename(columns={\n",
+    "\n",
+    "    \"userID\":'CustomerID',\"itemID\":'StockCode',\"rating\":'Quantity','prediction':'probability'\n",
+    "\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# n_factor=32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gassaf\\Documents\\3_Personal_Documents\\LAU\\Course11_Recommender_Systems\\Final_Project\\pyenv_310\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\base_layer_v1.py:1697: UserWarning: `layer.apply` is deprecated and will be removed in a future version. Please use `layer.__call__` method instead.\n",
+      "  warnings.warn('`layer.apply` is deprecated and '\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_nfactor32 = NCF (\n",
+    "    n_users=data.n_users, \n",
+    "    n_items=data.n_items,\n",
+    "    model_type=\"NeuMF\",\n",
+    "    n_factors=32,\n",
+    "    layer_sizes=[16,8,4],\n",
+    "    n_epochs=EPOCHS,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    learning_rate=1e-3,\n",
+    "    verbose=10,\n",
+    "    seed=SEED\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 217.2573 seconds for training.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with Timer() as train_time:\n",
+    "    model_nfactor32.fit(data)\n",
+    "\n",
+    "print(\"Took {} seconds for training.\".format(train_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 326.0792 seconds for prediction.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with Timer() as test_time:\n",
+    "    users, items, preds = [], [], []\n",
+    "    item = list(train.itemID.unique())\n",
+    "    for user in train.userID.unique():\n",
+    "        user = [user] * len(item)\n",
+    "        users.extend(user)\n",
+    "        items.extend(item)\n",
+    "        preds.extend(list(model_nfactor32.predict(user, item, is_list=True)))\n",
+    "\n",
+    "    all_predictions = pd.DataFrame(data={\"userID\": users, \"itemID\":items, \"prediction\":preds})\n",
+    "\n",
+    "    merged = pd.merge(train, all_predictions, on=[\"userID\", \"itemID\"], how=\"outer\")\n",
+    "    all_predictions = merged[merged.rating.isnull()].drop('rating', axis=1)\n",
+    "\n",
+    "print(\"Took {} seconds for prediction.\".format(test_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAP:\t0.053632\n",
+      "NDCG:\t0.111667\n",
+      "Precision@K:\t0.069525\n",
+      "Recall@K:\t0.092856\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval_map = map_at_k(test, all_predictions, col_prediction='prediction', k=TOP_K)\n",
+    "eval_ndcg = ndcg_at_k(test, all_predictions, col_prediction='prediction', k=TOP_K)\n",
+    "eval_precision = precision_at_k(test, all_predictions, col_prediction='prediction', k=TOP_K)\n",
+    "eval_recall = recall_at_k(test, all_predictions, col_prediction='prediction', k=TOP_K)\n",
+    "\n",
+    "print(\"MAP:\\t%f\" % eval_map,\n",
+    "      \"NDCG:\\t%f\" % eval_ndcg,\n",
+    "      \"Precision@K:\\t%f\" % eval_precision,\n",
+    "      \"Recall@K:\\t%f\" % eval_recall, sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_order = pd.read_excel('Rec_sys_data.xlsx', 'order')\n",
+    "df_customer = pd.read_excel('Rec_sys_data.xlsx', 'customer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_product = pd.read_excel('Rec_sys_data.xlsx', 'product')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_predictions = all_predictions[['userID','itemID','prediction']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_predictions = all_predictions.rename(columns={\n",
+    "\n",
+    "    \"userID\":'CustomerID',\"itemID\":'StockCode',\"rating\":'Quantity','prediction':'probability'\n",
+    "\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
